--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.4",
+    "lenis": "^1.3.11",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.12",
     "next": "15.5.2",
